log
Fri Apr  8 02:07:41 UTC 2022: 
 tests:  0|6
total_score: 0/70
f5cd033
Fri Apr  8 15:23:16 UTC 2022: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
test.c: In function ‘createMap’:
hashmap.c:63:12: error: ‘i’ is used uninitialized in this function [-Werror=uninitialized]
  for ((*i) = 0 ; (*i) < capacity ; (*i)++)
       ~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
e8b7bcd
Fri Apr  8 15:23:55 UTC 2022: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
a3b4db8
Fri Apr  8 15:26:02 UTC 2022: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ea68bc1
Fri Apr  8 15:59:01 UTC 2022: 
 hashmap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  5|4
total_score: 30/70
92db5f1
Fri Apr  8 15:59:41 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 30/70
72feeeb
Fri Apr  8 16:06:01 UTC 2022: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:113:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
6627800
Fri Apr  8 16:06:26 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
f35b68b
Sat Apr  9 04:07:41 UTC 2022: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 30/70
0317e37
Sat Apr  9 04:08:17 UTC 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
8ed964e
Sat Apr  9 04:12:26 UTC 2022: 
 hashmap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  8|3
total_score: 40/70
77b4b48
Sat Apr  9 04:18:39 UTC 2022: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  11|2
total_score: 50/70
0b5d3f9
Sat Apr  9 04:46:01 UTC 2022: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
878107b
Sat Apr  9 04:48:17 UTC 2022: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
17e2327
Sat Apr  9 04:49:16 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
df9d263
Sat Apr  9 04:50:36 UTC 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
0c80a43
Sat Apr  9 05:02:43 UTC 2022: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  17|0
total_score: 70/70
89edd0b
Sat Apr  9 05:28:07 UTC 2022: 
 hashmap.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
 tests:  17|0
total_score: 70/70
5d08567
Sat Apr  9 05:29:11 UTC 2022: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
15f1868
Sat Apr  9 05:29:43 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  17|0
total_score: 70/70
146ca27
Sat Apr  9 05:35:20 UTC 2022: 
 hashmap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘nextMap’:
hashmap.c:167:3: error: invalid type argument of unary ‘*’ (have ‘long int’)
  (*pos)++;
   ^~~~
Compilation failed
4f663b4
Sat Apr  9 05:35:32 UTC 2022: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  14|1
total_score: 60/70
3e9c0e7
Sat Apr  9 05:35:57 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
144a8dc
Sat Apr  9 05:36:17 UTC 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
78d75b9
Sat Apr  9 05:37:19 UTC 2022: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  14|1
total_score: 60/70
88ac999
Sat Apr  9 05:38:38 UTC 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  14|1
total_score: 60/70
90c5ad6
Sat Apr  9 05:39:43 UTC 2022: 
 hashmap.c | 11 +++--------
 1 file changed, 3 insertions(+), 8 deletions(-)
 tests:  15|1
total_score: 60/70
316dc4d
Sat Apr  9 05:40:12 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  16|1
total_score: 60/70
c9c2dd8
Sat Apr  9 05:41:03 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
323a7a0
Sat Apr  9 05:43:10 UTC 2022: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  16|1
total_score: 60/70
56fa55e
Sat Apr  9 05:44:39 UTC 2022: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘nextMap’:
hashmap.c:166:7: error: unused variable ‘cont’ [-Werror=unused-variable]
  long cont = 0;
       ^~~~
cc1: all warnings being treated as errors
Compilation failed
b261c22
Sat Apr  9 05:44:46 UTC 2022: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  16|1
total_score: 60/70
2aa7940
